--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,12 @@ java -jar target/spring-boot-demo-0.0.1-SNAPSHOT.jar
 	    <dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-	    </dependency>		
+	    </dependency>	
+	    <dependency>
+  			<groupId>org.postgresql</groupId>
+  			<artifactId>postgresql</artifactId>
+		</dependency>
+	    	
     	<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
