--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ server.port=${PORT:5000}
 spring.jpa.properties.hibernate.id.new_generator_mappings = true
 spring.jpa.properties.hibernate.format_sql = true
 #spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 logging.level.org.hibernate.SQL=DEBUG
